k8s/examples/old-client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: old-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: old-client
  template:
    metadata:
      labels:
        component: old-client
    spec:
      containers:
        - name: old-client
          image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-old-client
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "1"
          ports:
            - containerPort: 3000
