k8s/examples/private-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: private-api
  template:
    metadata:
      labels:
        component: private-api
    spec:
      containers:
        - name: private-api
          image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-private-api
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.1"
            limits:
              memory: "256Mi"
              cpu: "0.1"
          ports:
            - containerPort: 3000
