k8s/examples/public-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: public-api
  template:
    metadata:
      labels:
        component: public-api
    spec:
      containers:
        - name: public-api
          image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-public-api
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 3000
