k8s/examples/public-api-go-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api-go-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: public-api-go
  template:
    metadata:
      labels:
        component: public-api-go
    spec:
      containers:
        - name: public-api-go
          image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-public-api-go
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.25"
            limits:
              memory: "1Gi"
              cpu: "0.25"
          ports:
            - containerPort: 3000
