k8s/examples/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis-deployment
  template:
    metadata:
      labels:
        component: redis-deployment
    spec:
      containers:
        - name: redis
          image: your-docker-id/ustrending-redis
          resources:
            requests:
              memory: "48Mi"
              cpu: "0.1"
            limits:
              memory: "48Mi"
              cpu: "0.1"
          ports:
            - containerPort: 6379
