k8s/examples/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-server
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.2"
            limits:
              memory: "256Mi"
              cpu: "0.2"
          ports:
            - containerPort: 3000
