k8s/examples/trends-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trends-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: trends-api
  template:
    metadata:
      labels:
        component: trends-api
    spec:
      containers:
        - name: trends-api
          image: your-docker-id/ustrending-trends-api
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.25"
            limits:
              memory: "1Gi"
              cpu: "0.25"
          ports:
            - containerPort: 3000
