k8s/examples/worker-google-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-google-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker-google
  template:
    metadata:
      labels:
        component: worker-google
    spec:
      containers:
        - name: worker
          image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-worker
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.1"
