k8s/examples/worker-trends-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-trends-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker-trends
  template:
    metadata:
      labels:
        component: worker-trends
    spec:
      containers:
        - name: worker-trends
          image: your-docker-id/ustrending-worker-trends
          resources:
            requests:
              memory: "24Mi"
              cpu: "0.1"
            limits:
              memory: "24Mi"
              cpu: "0.1"
          ports:
            - containerPort: 3000
