k8s/examples/worker-twitter-trends-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-twitter-trends-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker-twitter-trends
  template:
    metadata:
      labels:
        component: worker-twitter-trends
    spec:
      containers:
        - name: worker-twitter-trends
          image: REPLACE_ME_WITH_YOUR_DOCKER_ID/ustrending-worker-twitter-trends
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.1"
