k8s/examples/mongo-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mongo-deployment
  ports:
  - port: 27017
    targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-load-balancer
spec:
  type: LoadBalancer
  ports:
    - name: mongo-load-balancer
      port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    component: mongo-deployment
