k8s/examples/old-client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: old-client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: old-client
  ports:
  - port: 3000
    targetPort: 3000
