k8s/examples/private-api-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: private-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: private-api
  ports:
  - port: 3000
    targetPort: 3000
