k8s/examples/public-api-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: public-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: public-api
  ports:
  - port: 3000
    targetPort: 3000
