k8s/examples/trends-api-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: trends-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: trends-api
  ports:
  - port: 3000
    targetPort: 3000
