k8s/examples/worker-trends-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: worker-trends-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: worker-trends
  ports:
  - port: 3000
    targetPort: 3000
