k8s/examples/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api/?(.*)
            backend:
              service:
                name: public-api-cluster-ip-service
                port:
                  number: 3000
          # DEVELOPMENT PURPOSES ONLY, WILL NOT BE PUBLIC-FACING IN PRODUCITON!
          # DO NOT USE THIS HANDLE IN ANY CODEBASE, THIS IS SO YOU CAN TEST
          # IN THE BROWSER IF NEEDED! IT WILL NOT BE AVAILABLE IN PRODUCITON!!!
          - pathType: Prefix
            path: /trends-api/?(.*)
            backend:
              service:
                name: trends-api-cluster-ip-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /old-client/?(.*)
            backend:
              service:
                name: old-client-cluster-ip-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
